include header and footer ejs

--- a/src/views/admin/login.ejs
+++ b/src/views/admin/login.ejs
@@ -1,4 +1,4 @@
-<%- include('../layout', { title: 'Admin Login' }) %>
+<%- include('../header', { title: 'Admin Login' }) %>
 
 <div class="container mt-5">
   <div class="row justify-content-center">
@@ -31,4 +31,6 @@
       </div>
     </div>
   </div>
-</div> 
+</div>
+
+<%- include('../footer') %> 
