--- a/src/views/error.ejs
+++ b/src/views/error.ejs
@@ -1,4 +1,4 @@
-<%- include('layout', { title: 'Error' }) %>
+<%- include('header', { title: 'Error' }) %>
 
 <div class="container mt-5">
   <div class="row justify-content-center">
@@ -20,4 +20,6 @@
       </div>
     </div>
   </div>
-</div> 
+</div>
+
+<%- include('footer') %> 
