--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,4 +1,4 @@
-<%- include('layout', { title: 'WhatsApp Delivery Bot' }) %>
+<%- include('header', { title: 'WhatsApp Delivery Bot' }) %>
 
 <div class="container mt-5">
   <div class="row justify-content-center">
@@ -55,4 +55,6 @@
       </div>
     </div>
   </div>
-</div> 
+</div>
+
+<%- include('footer') %> 
