--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -1,4 +1,4 @@
-<%- include('layout', { title: 'Register Business' }) %>
+<%- include('header', { title: 'Register Business' }) %>
 
 <div class="container mt-5">
   <div class="row justify-content-center">
@@ -38,4 +38,6 @@
       </div>
     </div>
   </div>
-</div> 
+</div>
+
+<%- include('footer') %> 
