--- a/src/views/setup-business.ejs
+++ b/src/views/setup-business.ejs
@@ -1,4 +1,4 @@
-<%- include('layout', { title: 'Setup Business' }) %>
+<%- include('header', { title: 'Setup Business' }) %>
 
 <div class="container mt-5">
   <div class="row justify-content-center">
@@ -39,4 +39,6 @@
       </div>
     </div>
   </div>
-</div> 
+</div>
+
+<%- include('footer') %> 
