--- a/src/views/footer.ejs
+++ b/src/views/footer.ejs
@@ -1,3 +1,5 @@
+    </div> <!-- Close main content container -->
+    
     <!-- Footer -->
     <footer class="bg-light mt-5 py-3">
         <div class="container text-center">
