fix: restructure server initialization and fix template issues

--- a/src/views/header.ejs
+++ b/src/views/header.ejs
@@ -78,5 +78,7 @@
 
     <!-- Main Content Container -->
     <div class="flex-grow-1">
+        <!-- Content will be inserted here -->
+    </div>
 </body>
 </html> 
