--- a/src/views/admin/admins.ejs
+++ b/src/views/admin/admins.ejs
@@ -2,7 +2,14 @@
 
 <div class="container-fluid mt-4">
   <div class="row">
-    <div class="col-12">
+    <div class="col-md-3 col-lg-2">
+      <div class="card">
+        <div class="card-body">
+          <% include('sidebar') %>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-9 col-lg-10">
       <div class="card">
         <div class="card-header d-flex justify-content-between align-items-center">
           <h4 class="mb-0">Admins</h4>
