feat: modern UI style for admin dashboard with custom CSS

--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -38,6 +38,7 @@
             border-color: #128C7E;
         }
     </style>
+    <link rel="stylesheet" href="/css/admin-custom.css">
 </head>
 <body>
     <!-- Navigation -->
