--- a/src/views/error.ejs
+++ b/src/views/error.ejs
@@ -1,6 +1,6 @@
 <%- include('header', { title: 'Error' }) %>
 
-<div class="container mt-5">
+<div class="container mt-5 pastel-blue-bg">
   <div class="row justify-content-center">
     <div class="col-md-6">
       <div class="card">
