--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,6 +1,6 @@
 <%- include('header', { title: 'WhatsApp Delivery Bot' }) %>
 
-<div class="container mt-5">
+<div class="container mt-5 pastel-blue-bg">
   <div class="row justify-content-center">
     <div class="col-md-8 text-center">
       <h1 class="display-4 mb-4">WhatsApp Delivery Bot</h1>
