--- a/src/views/admin/admins.ejs
+++ b/src/views/admin/admins.ejs
@@ -1,16 +1,9 @@
 <%- include('../layout', { title: 'Manage Admins' }) %>
 
-<div class="container-fluid mt-4">
+<div class="container-fluid mt-4 pastel-blue-bg">
   <div class="row">
-    <div class="col-md-3 col-lg-2">
-      <div class="card">
-        <div class="card-body">
-          <% include('sidebar') %>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-9 col-lg-10">
-      <div class="card">
+    <div class="col-12">
+      <div class="card pastel-blue-card text-dark">
         <div class="card-header d-flex justify-content-between align-items-center">
           <h4 class="mb-0">Admins</h4>
           <a href="/admin/admins/add" class="btn btn-primary">Add Admin</a>
