--- a/src/views/admin/edit-business.ejs
+++ b/src/views/admin/edit-business.ejs
@@ -1,9 +1,9 @@
 <%- include('../layout', { title: business ? 'Edit Business' : 'Add Business' }) %>
 
-<div class="container mt-5">
+<div class="container mt-5 pastel-blue-bg">
   <div class="row justify-content-center">
     <div class="col-md-8">
-      <div class="card">
+      <div class="card pastel-blue-card text-dark">
         <div class="card-header">
           <h4><%= business ? 'Edit Business' : 'Add Business' %></h4>
         </div>
