--- a/src/views/admin/orders.ejs
+++ b/src/views/admin/orders.ejs
@@ -1,16 +1,9 @@
 <%- include('../layout', { title: 'Admin Orders' }) %>
 
-<div class="container-fluid mt-4">
+<div class="container-fluid mt-4 pastel-blue-bg">
   <div class="row">
-    <div class="col-md-3 col-lg-2">
-      <div class="card">
-        <div class="card-body">
-          <% include('sidebar') %>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-9 col-lg-10">
-      <div class="card mb-4">
+    <div class="col-12">
+      <div class="card mb-4 pastel-blue-card text-dark">
         <div class="card-body">
           <form class="row g-3 align-items-end" method="get" action="/admin/orders">
             <div class="col-md-3">
@@ -43,7 +36,7 @@
           </form>
         </div>
       </div>
-      <div class="card">
+      <div class="card pastel-blue-card text-dark">
         <div class="card-header d-flex justify-content-between align-items-center">
           <h4 class="mb-0">All Orders</h4>
         </div>
