--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -7,6 +7,7 @@
     
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/theme.css" rel="stylesheet">
     
     <!-- Custom CSS -->
     <style>
@@ -38,9 +39,8 @@
             border-color: #128C7E;
         }
     </style>
-    <link rel="stylesheet" href="/css/admin-custom.css">
 </head>
-<body>
+<body class="pastel-blue-bg">
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark mb-4">
         <div class="container">
