--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -21,10 +21,10 @@
             color: white !important;
             font-weight: bold;
         }
-        .nav-link {
+        .navbar .nav-link {
             color: rgba(255, 255, 255, 0.9) !important;
         }
-        .nav-link:hover {
+        .navbar .nav-link:hover {
             color: white !important;
         }
         .card {
